deploy/kubernetes_manifests/myretail/api/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myretail
  labels:
    target: myretail
    component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      target: myretail
      component: api
  template:
    metadata:
      name: myretail
      labels:
        target: myretail
        component: api
    spec:
      containers:
      - name: myretail-api
        image: "registry.localhost:5000/jrruethe/myretail:latest"
        ports:
        - name: http
          containerPort: 4567
          protocol: TCP
