deploy/kubernetes_manifests/myretail/api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myretail
  labels:
    target: myretail
    component: api
spec:
  selector:
    target: myretail
    component: api
  ports:
  - name: http
    port: 4567
    protocol: TCP
