deploy/kubernetes_manifests/myretail/api/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myretail
  labels:
    target: myretail
    component: api
spec:
  rules:
  - host: myretail.localhost
    http:
      paths:
      - backend:
          service:
            name: myretail
            port: 
              name: http
        path: /
        pathType: Prefix
